// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="ui-shared__button tss-hgw3or-button "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="tss-1c5ghbj-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="ui-shared__button tss-1cs55nz-button "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="tss-7ia9r1-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="ui-shared__button tss-hgw3or-button "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="tss-1c5ghbj-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="ui-shared__button tss-x945ka-button "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="tss-15qwb42-content"
  >
    Press me
  </div>
</Button>
`;
